# lrps2-libretro

./: .gitignore  .gitlab-ci.yml  .gitmodules  Makefile  Makefile.common  README.md
cmake/: BuildParameters.cmake  SearchForStuff.cmake  TargetArch.cmake
common/: AlignedMalloc.cpp  AlignedMalloc.h  CMakeLists.txt  Console.cpp  Console.h  FPControl.h  FastJmp.cpp  FastJmp.h  FastJmp_mingw.S  FileSystem.cpp  FileSystem.h  General.h  HashCombine.h  HostSys.cpp  Pcsx2Defs.h  Perf.h  RedtapeWilCom.h  Semaphore.cpp  SettingsWrapper.cpp  SingleRegisterTypes.h  StringUtil.cpp  StringUtil.h  Threading.h  Threads.cpp  Timer.cpp  VectorIntrin.h  common.vcxproj  common.vcxproj.filters
common/emitter/: groups.cpp  instructions.h  movs.cpp  simd.cpp  x86emitter.cpp  x86types.h
common/emitter/implement/: group1.h  group3.h  simd_moremovs.h
libretro/: USB.cpp  libretro_core_options.h  main.cpp  patches.cpp
libretro/libretro-common/streams/: file_stream.c
pcsx2/: CMakeLists.txt  COP0.cpp  Config.h  Counters.cpp  Counters.h  Elfheader.cpp  Elfheader.h  FPU.cpp  GS.h  GameDatabase.cpp  Gif.cpp  Gif_Unit.cpp  Gif_Unit.h  Hw.cpp  Hw.h  Interpreter.cpp  IopBios.cpp  IopBios.h  IopCounters.cpp  IopCounters.h  IopDma.cpp  IopDma.h  IopIrq.cpp  IopMem.cpp  IopMem.h  MTGS.cpp  MTVU.cpp  MTVU.h  Memory.cpp  MemoryCardFile.cpp  MemoryCardProtocol.cpp  Patch.cpp  Pcsx2Config.cpp  R3000A.cpp  R3000A.h  R3000AInterpreter.cpp  R5900.cpp  R5900.h  R5900OpcodeImpl.cpp  R5900OpcodeTables.cpp  (+26 more)
pcsx2/CDVD/: CDVD.cpp  CDVDcommon.cpp  CDVDisoReader.cpp  CsoFileReader.cpp  GzippedFileReader.cpp  InputIsoFile.cpp  ThreadedFileReader.cpp
pcsx2/CDVD/IsoFS/: IsoFile.cpp
pcsx2/DEV9/: AdapterUtils.cpp  DEV9.h  net.h  pcap_io.cpp
pcsx2/DEV9/ATA/: ATA_State.cpp  ATA_Transfer.cpp
pcsx2/GS/: GS.cpp  GSClut.cpp  GSLocalMemory.cpp  GSLocalMemory.h  GSState.cpp  GSState.h  GSUtil.h  GSVector.cpp  GSVector.h  GSVector4_arm64.h  GSVector4i.h  GSVector4i_arm64.h  GSXXH.cpp  GSXXH.h
pcsx2/GS/Renderers/Common/: GSDevice.h  GSRenderer.cpp  GSShaderEnums.h  GSVertex.h  GSVertexTrace.cpp  GSVertexTrace.h
pcsx2/GS/Renderers/DX11/: D3D11ShaderCache.cpp  GSDevice11.cpp  GSDevice11.h  GSTexture11.cpp  tfx.fx
pcsx2/GS/Renderers/DX12/: D3D12ShaderCache.cpp  GSDevice12.cpp  GSDevice12.h  GSTexture12.cpp  GSTexture12.h
pcsx2/GS/Renderers/HW/: GSHwHack.cpp  GSHwHack.h  GSRendererHW.cpp  GSRendererHW.h  GSRendererHWMultiISA.cpp  GSTextureCache.cpp
pcsx2/GS/Renderers/OpenGL/: GLShaderCache.cpp  GSDeviceOGL.cpp  tfx_fs.glsl
pcsx2/GS/Renderers/SW/: GSDeviceSW.cpp  GSDeviceSW.h  GSDrawScanline.cpp  GSRasterizer.h  GSRendererSW.cpp  GSRendererSW.h  GSScanlineEnvironment.h  GSSetupPrimCodeGenerator.all.cpp  GSTextureSW.cpp  GSTextureSW.h
pcsx2/GS/Renderers/Vulkan/: GSDeviceVK.cpp  GSDeviceVK.h  VKShaderCache.cpp  tfx.glsl
pcsx2/GS/Renderers/parallel-gs/: GSRendererPGS.cpp
pcsx2/GS/parallel-gs/: CMakeLists.txt
pcsx2/GS/parallel-gs/Granite/: CMakeLists.txt
pcsx2/GS/parallel-gs/Granite/application/: CMakeLists.txt
pcsx2/GS/parallel-gs/Granite/application/global/: CMakeLists.txt
pcsx2/GS/parallel-gs/Granite/math/: CMakeLists.txt
pcsx2/GS/parallel-gs/Granite/util/: CMakeLists.txt
pcsx2/GS/parallel-gs/Granite/vulkan/: CMakeLists.txt  breadcrumbs.cpp
pcsx2/IPU/: IPU.cpp  IPU.h  IPU_MultiISA.cpp  IPUdither.cpp  IPUdma.cpp  IPUdma.h  yuv2rgb.cpp
pcsx2/PAD/: PAD.cpp  PAD.h
pcsx2/SPU2/: ADSR.cpp  Dma.cpp  DplIIdecoder.cpp  Mixer.cpp  ReadInput.cpp  RegTable.cpp  Reverb.cpp  ReverbResample.cpp  defs.h  spu2.cpp  spu2.h  spu2freeze.cpp  spu2sys.cpp
pcsx2/USB/: USB.h
pcsx2/arm64/: ArmCompat.h  AsmHelpers.cpp  AsmHelpers.h  Profiler_arm64.cpp  Profiler_arm64.h  RecStubs.cpp  SyncStats_arm64.cpp  SyncStats_arm64.h  Vif_Dynarec_arm64.cpp  Vif_UnpackNEON.cpp  Vif_UnpackNEON.h  aVU.cpp  aVU.h  aVU_Alloc.inl  aVU_Branch.inl  aVU_Clamp.inl  aVU_Compile.inl  aVU_Flags.inl  aVU_IR.h  aVU_Lower.inl  aVU_Macro.inl  aVU_Misc.h  aVU_Misc.inl  aVU_Persist.inl  aVU_Upper.inl  recR3000A_arm64.cpp  recR5900_arm64.cpp  recVU1_arm64.cpp
pcsx2/microVU/: microVU_Analyze.inl  microVU_BlockManager.inl  microVU_Const.h  microVU_Pipeline.inl  microVU_Structs.h  microVU_Types.h
pcsx2/ps2/: BiosTools.cpp
pcsx2/x86/: BaseblockEx.cpp  BaseblockEx.h  CpuState.cpp  iCOP0.cpp  iCore.h  iFPU.cpp  iFPUd.cpp  iMMI.cpp  iR3000A.cpp  iR3000A.h  iR3000Atables.cpp  iR5900.h  iR5900Shift.h  microVU.cpp  microVU.h  microVU_Analyze.inl  microVU_Branch.inl  microVU_Clamp.inl  microVU_Compile.inl  microVU_Execute.inl  microVU_Flags.inl  microVU_IR.h  microVU_Lower.inl  microVU_Macro.inl  microVU_Misc.h  microVU_Misc.inl  microVU_Upper.inl  newVif_Dynarec.cpp  newVif_UnpackSSE.cpp
pcsx2/x86/ix86-32/: iR5900-32.cpp  iR5900MultDiv.cpp  iR5900Templates.cpp  recVTLB.cpp
tools/emitter-verify/: README.md  emit_corpus.cpp  golden.txt
